[package]
name = "blockchain_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
crossterm = "0.21"
tokio = { version = "1", features = ["full"] }
ring = "0.16.20"
